--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,6 @@
       <p class="balance-amount">$921.48</p>
     </div>
     <div class="header__logo">
-      <img src="../../../docs/assets/images/logo.svg" alt="logo" class="logo">
+      <img src="../../docs/assets/images/logo.svg" alt="logo" class="logo">
     </div>
 </header>
